# OVS-SDN-SFC-K8s

./: README.md
Environment Setup/: Adding_OvS_Bridge.sh  CNIs_Implementation.sh  k8s_Master.sh  k8s_Workers.sh
Framework/: BUILD.bazel  ControllerTask.java  amirSFC.java
