COMPILE_DEPS = CORE_DEPS + JACKSON + REST + [
    "//core/common:onos-core-common",
]

osgi_jar_with_tests(
    deps = COMPILE_DEPS,
)

REQUIRE_APPS = [
    "org.onosproject.proxyarp",
]

onos_app(
    category = "SFC K8s",
    description = "Intent SFC",
    required_apps = REQUIRE_APPS,
    title = "amirSFC",
    url = "https://www.SFC.com",
)
